--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,11 +1,16 @@
 <!-- 在這個 view ，建立使用者將會看到的task詳情，擷取@task裡的name、due date、note -->
 
-<table class="table table-striped table-condensed">
-  <td><%= @task.name %></td>
-  <td><%= @task.date %></td>
+<div class="container">
+  <table class="table table-striped table-condensed">
+    <td><%= @task.name %></td>
+    <td><%= @task.date %></td>
 
-  <!-- simple_format 是rails helper，使表單傳入資料時會帶有的 \n (newline，換行字元)，轉譯為 HTML 中代表換行的 <br /> 或段落 <p></p> -->
-  <td><%= simple_format(@task.note) %></td>
-</table>
+    <!-- simple_format 是rails helper，使表單傳入資料時會帶有的 \n (newline，換行字元)，轉譯為 HTML 中代表換行的 <br /> 或段落 <p></p> -->
+    <td><%= simple_format(@task.note) %></td>
+  </table>
+</div>
 <!-- 引導回index頁面 -->
-<%= link_to 'Home Page', tasks_path %>
+<br />
+<div class="container form-group">
+  <%= link_to "<span class='glyphicon glyphicon-home'></span>  Back to Home Page".html_safe, tasks_path, class: "btn btn-primary" %>
+</div>
