--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,6 +2,13 @@
 
 <div class="container">
   <table class="table table-striped table-condensed">
+    <tr>
+      <th>Task</th>
+      <th>Due Date</th>
+      <th>Details</th>
+      <th>Edit</th>
+    <th>Delete</th>
+    </tr>
     <td><%= @task.name %></td>
     <td><%= @task.date %></td>
 
